fixed issue with carousel not showing next card on mobile

--- a/app/styles/home/tool-carousel.scss
+++ b/app/styles/home/tool-carousel.scss
@@ -53,6 +53,7 @@
           cursor: pointer;
           padding: 4px;
           opacity: 0.6;
+          color: $secondary;
         }
 
         .scrollbar-track {
@@ -95,8 +96,11 @@
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
 
   @include break-max($break-lg) {
-    max-width: 80%;
-    height: 400px;
+    width: 80%;
+    overflow-x: visible;
+    margin-left:20px;
+    height: auto;
+    max-width: 300px;
   }
 
   img {
